Bug 9640 - change to colour of border around questions number to allow the focus on tabbing to be bvisible ion IE8
change colour from #888 to #221037;

--- a/webinf-tnavigator/templates/navigator.css
+++ b/webinf-tnavigator/templates/navigator.css
@@ -211,7 +211,7 @@ html.zoom20 #progress .question,html.zoom20 #progress .text,html.zoom20 #progres
 }
 #progress .question a,#progress .question span,#progress .text a,#progress .text span
 {
-  border:1px solid #888;
+  border:1px solid #221037; /* fix for bug 9640 */
 /*FIXED*/ border-color:%%FG%%;
 }
 
